<resources>
    <string name="app_name">Outfit7 Apps</string>
    <string name="package_name">Package Name:</string>
    <string name="version_name">Version Name:</string>
    <string name="version_code">Version Code:</string>
    <string name="open_app">Open app</string>
    <string name="see_permissions">See Permissions</string>
    <string name="outfit7_apps_not_found">Outfit7 apps not found</string>
</resources>
