<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_app_icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/txt_app_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/img_app_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_app_icon"
        app:layout_constraintTop_toTopOf="@+id/img_app_icon" />

    <TextView
        android:id="@+id/lbl_package_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        android:text="@string/package_name"
        app:layout_constraintStart_toStartOf="@+id/img_app_icon"
        app:layout_constraintTop_toBottomOf="@+id/img_app_icon" />

    <TextView
        android:id="@+id/txt_package_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        tools:text="com.outfit7.talkingtom"
        app:layout_constraintBaseline_toBaselineOf="@+id/lbl_package_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lbl_package_name" />

    <TextView
        android:id="@+id/lbl_version_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/version_name"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/img_app_icon"
        app:layout_constraintTop_toBottomOf="@+id/lbl_package_name" />

    <TextView
        android:id="@+id/txt_version_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        tools:text="1.2.4"
        app:layout_constraintBaseline_toBaselineOf="@+id/lbl_version_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txt_package_name" />

    <TextView
        android:id="@+id/lbl_version_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/version_code"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/img_app_icon"
        app:layout_constraintTop_toBottomOf="@+id/lbl_version_name" />

    <TextView
        android:id="@+id/txt_version_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        tools:text="23"
        app:layout_constraintBaseline_toBaselineOf="@+id/lbl_version_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txt_version_name" />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/img_app_icon"
        app:layout_constraintTop_toBottomOf="@+id/lbl_version_code">

        <Button
            android:id="@+id/btn_app_permissions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/see_permissions"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_open_app"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/open_app"
            android:textAllCaps="false" />


    </LinearLayout>



</android.support.constraint.ConstraintLayout>